[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["mihai <balint.mihai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
